# thubo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
bench/: Cargo.toml
bench/src/: lib.rs
bench/tests/: latency.py  latency.sh  throughput.py  throughput.sh
examples/: base_recv.rs  base_send.rs  base_send_boomerang.rs  serde_recv.rs  serde_send.rs
src/: lib.rs
src/api/: receiver.rs  sender.rs
src/buffers/: boxbuf.rs  bytes.rs  chunk.rs  mod.rs  slice.rs  vec.rs
src/codec/: fragment.rs  frame.rs  mod.rs
src/codec/core/: array.rs  bytes.rs  chunk.rs  mod.rs  seq_num.rs  slice.rs  string.rs  vle.rs
src/collections/: boomerang.rs  mod.rs  on_drop.rs  single_or_vec.rs
src/pipeline/: mod.rs  rx.rs  tx.rs
src/pipeline/ringbuf/: common.rs  mod.rs  mpsc.rs  spmc.rs  spsc.rs
src/protocol/: fragment.rs  frame.rs  mod.rs
src/protocol/core/: congestion_control.rs  mod.rs  priority.rs  qos.rs  seq_num.rs
src/sync/: event.rs  mod.rs  time.rs
tests/: base.rs
