[package]
name = "thubo"
rust-version = "1.85.0"
version = "0.1.0"
repository = "https://github.com/Mallets/thubo"
authors = ["Luca Cominardi <luca.cominardi@gmail.com>"]
edition = "2024"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Thubo: a high-performance TX/RX network pipeline featuring strict priority scheduling, automatic batching, and message fragmentation."

[features]
stats = []

[dependencies]
async-mutex = { version = "1.4.0" }
crossbeam-utils = { version = "0.8.21" }
event-listener = { version = "5.4.1" }
quanta = { version = "0.12.6" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
  "io-util",
] }
tokio-util = { version = "0.7.18" }

[dev-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = { version = "0.9.2", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
